RESOLVED FIXED278472
[Navigation] Fix dispatching wrong event on abort
https://bugs.webkit.org/show_bug.cgi?id=278472
Summary [Navigation] Fix dispatching wrong event on abort
Patrick Griffis
Reported 2024-08-21 10:50:44 PDT
The wrong constructor was used for ErrorEvent.
Attachments
Patrick Griffis
Comment 1 2024-08-21 11:48:38 PDT
EWS
Comment 2 2024-08-23 19:09:11 PDT
Committed 282691@main (e4b5bb94c21c): <https://commits.webkit.org/282691@main> Reviewed commits have been landed. Closing PR #32538 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-08-23 19:10:15 PDT
Note You need to log in before you can comment on or make changes to this bug.